# pyvespa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CLAUDE.md  CNAME  Gemfile  MANIFEST.in  README.md  REMOVE_DEPS_PLAN.md  TEST_STRATEGY.md  _config.yml  _paragraphs_config.yml  _suggestions_config.yml  advanced-configuration.html  advanced-configuration.md.txt  ann-parameters.html  ann-parameters.md.txt  application-packages.html  application-packages.md  authenticating-to-vespa-cloud.html  authenticating-to-vespa-cloud.md  conf.html  copilot-instructions.md  evaluating-vespa-application-cloud.html  evaluating-vespa-application-cloud.md  examples.rst  feed-split.py  feed_to_vespa.py  getting-help-from-ai.html  getting-help-from-ai.md.txt  getting-started-pyvespa-cloud.html  getting-started-pyvespa-cloud.md.txt  getting-started-pyvespa.html  getting-started-pyvespa.md  index.html  index.md  index.md.txt  (+23 more)
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: copy_sample_files.py  ignore_urls.txt  linkcheck.py  replace_pip_install_notebooks.sh
.github/workflows/: copilot-setup-steps.yml  doc-test.yml  docs-test.yml  feed.yml  integration-cloud-token.yml  integration-cloud-vector-search.yml  integration-cloud.yml  integration-except-cloud.yml  integration-tests-cloud.yml  mend.yml  mktestdocs.yml  notebooks-cloud.yml  notebooks-except-cloud.yml  publish-gh-pages.yml  pyvespa-prod-long.yml  pyvespa-tests-except-cloud.yml  pyvespa-unit-tests.yml  pyvespa.yml  pyvespa_bump_version.yml  pyvespa_release_publish.yml  release-pyvespa.yml  release-vespacli.yml  update-deps.yml  vespacli.yml  vespacli_check_version.yml  vespacli_cross_platform_tests.yml  vespacli_release_publish.yml  vespacli_test.yml
_plugins-vespafeed/: vespa_index_generator.rb
_static/: custom.css
api/: summary.html  summary.md.txt
api/vespa/: application.html  application.md  deployment.html  deployment.md  evaluation.html  evaluation.md  evaluation.md.txt  exceptions.html  exceptions.md  index.html  io.html  io.md.txt  models.html  models.md.txt  package.html  package.md  throttling.html  throttling.md
dev/: docker-test.ipynb
docs/: llmstxt_preprocess.py
docs/hooks/: copy_md_to_txt.py
docs/sphinx/: Makefile
examples/: Matryoshka_embeddings_in_Vespa-cloud.html  Matryoshka_embeddings_in_Vespa-cloud.md  README.md  ann-parameter-tuning-vespa-cloud.html  ann-parameter-tuning-vespa-cloud.md.txt  billion-scale-vector-search-with-cohere-embeddings-cloud.html  billion-scale-vector-search-with-cohere-embeddings-cloud.md.txt  cert_content_example.py  chat_with_your_pdfs_using_colbert_langchain_and_Vespa-cloud.html  chat_with_your_pdfs_using_colbert_langchain_and_Vespa-cloud.md  cohere-binary-vectors-in-vespa-cloud.html  cohere-binary-vectors-in-vespa-cloud.md  colbert_standalone_Vespa-cloud.html  colbert_standalone_Vespa-cloud.md.txt  colbert_standalone_long_context_Vespa-cloud.html  colbert_standalone_long_context_Vespa-cloud.md  colpali-benchmark-vqa-vlm_Vespa-cloud.html  colpali-benchmark-vqa-vlm_Vespa-cloud.md.txt  colpali-document-retrieval-vision-language-models-cloud.html  colpali-document-retrieval-vision-language-models-cloud.md  cross-encoders-for-global-reranking.html  cross-encoders-for-global-reranking.md.txt  evaluating-with-snowflake-arctic-embed.html  evaluating-with-snowflake-arctic-embed.md  feed_performance.md  feed_performance_cloud.html  feed_performance_cloud.md  feed_performance_cloud.md.txt  index.html  index.md  lightgbm-with-categorical-mapping.html  lightgbm-with-categorical-mapping.md  lightgbm-with-categorical.html  lightgbm-with-categorical.md  mixedbread-binary-embeddings-with-sentence-transformers-cloud.html  mixedbread-binary-embeddings-with-sentence-transformers-cloud.md  mother-of-all-embedding-models-cloud.html  mother-of-all-embedding-models-cloud.md  mteb_vespabm25.py  multi-vector-indexing.html  (+23 more)
results/: README.md  evaluate_models_mteb.py  index.html
results/NanoBEIR/: NanoBEIR_e5-small-v2_bin_384__e5-small-v2_full_384__e5-small-v2_full_384_results.json  NanoBEIR_e5-small-v2_bin_384_results.json  NanoBEIR_e5-small-v2_results.json  NanoBEIR_embeddinggemma-300m_full_768_results.json  generate_leaderboard.py  models.js
results/inference/: onnxbench.py
search/: search_index.json
tests/integration/: evaluating-vespa-application-cloud.py  test_integration_cert_content.py  test_integration_docker.py  test_integration_evaluation.py  test_integration_grouping.py  test_integration_mtebevaluation.py  test_integration_queries.py  test_integration_vespa_cloud.py  test_integration_vespa_cloud_mteb.py  test_integration_vespa_cloud_prod_long.py  test_integration_vespa_cloud_token.py  test_integration_vespa_cloud_vector_search.py
tests/mktestdocs/: test_mkdocs.py  test_mkdocstring.py
tests/perf/: conftest.py  k6_token_vs_mtls.js  test_token_vs_mtls.py
tests/scripts/: linkcheck.py
tests/unit/: test_application.py  test_configuration.py  test_deployment.py  test_evaluator.py  (+10 more)
vespa/: __init__.py  application.py  data.py  deployment.py  dynamic.py  evaluation.py  exceptions.py  feeder.py  gallery.py  io.py  json_serialization.py  ml.py  models.py  nanobeir.py  package.py  query.py  stateless.py  test_application.py  test_dynamic.py  test_evaluation.py  test_integration_docker.py  test_integration_docker_msmarco.py  test_integration_ranking.py  test_integration_running_instance.py  test_integration_vespa_cloud.py  test_integration_vespa_cloud_token.py  test_integration_vespa_cloud_vector_search.py  test_io.py  test_ml.py  test_package.py  test_query.py  test_stateless.py  throttling.py  vespa_mteb.py  vespa_mteb_run_many.py
vespacli/: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements_build.txt  requirements_dev.txt
vespacli/.github/workflows/: check_version.yml  cross_platform_tests.yml  release_publish.yml
vespacli/utils/: check_latest_version.py  download_binaries.py  update_version.py
vespacli/vespacli/: __init__.py  __main__.py  _version_generated.py
voyage-ai-package/: voyage_app.py
(+212 files in other folders)
