[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=69", "wheel",]

[project]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: Apache Software License", "Operating System :: OS Independent",]
description = "A Python wrapper for Vespa CLI tools, supporting multiple platforms."
keywords = [ "vespa", "cli", "wrapper",]
name = "vespacli"
readme = "README.md"
version = "8.367.14"
[[project.authors]]
name = "Thomas Thoresen"
email = "thomas@vespa.ai"

[project.license]
file = "LICENSE"

[project.urls]
documentation = "https://docs.vespa.ai/en/vespa-cli.html"
homepage = "https://pypi.org/project/vespacli/"
repository = "https://github.com/pyvespa/vespacli"

[project.scripts]
vespa = "vespacli:run_vespa_cli"

[project.optional-dependencies]
build = [ "setuptools==69.0.3", "build==1.0.3", "twine==5.1.1", "toml==0.10.2", "requests==2.32.0",]

[tool.setuptools.packages.find]
where = [ ".",]
